--- a/index.html
+++ b/index.html
@@ -121,17 +121,21 @@
             <div class="session-cinema">
                 <span class="session-label">Кинотеатр</span>
                 <select class="select select-cinema" name="cinema">
-                    <option value="Октябрь, ул. Калужская 27">Октябрь, ул. Калужская 27</option>
-                    <option value="Imax, пр-кт Мира 30">Imax, пр-кт Мира 30</option>
-                    <option value="Cinema 4D, ул. Большевитская 1">Cinema 4D, ул. Большевитская 1</option>
-                </select>
-            </div>
-            <div class="session-time">
-                <span class="session-label">Время</span>
-                <select class="select select-time" name="cinema-time">
-                    <option value="12:00">12:00</option>
-                    <option value="16:30">16:30</option>
-                    <option value="17:25">17:25</option>
+                   <option value="Imal, ул. Калинина 24">Imal, ул. Калинина 24</option>
+            <option value="Ashan, пр-кт Куйбышего 24">
+              Ashan, пр-кт Куйбышего 24
+            </option>
+            <option value="Cinema 4D, ул. Большевитская 8">
+              Cinema 4D, ул. Большевитская 4
+            </option>
+          </select>
+        </div>
+        <div class="session-time">
+          <span class="session-label">Время</span>
+          <select class="select select-time" name="cinema-time">
+            <option value="12:00">11:30</option>
+            <option value="16:30">18:30</option>
+            <option value="17:25">20:50</option>
                 </select>
             </div>
         </div>
